--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -7815,8 +7815,8 @@ oms IRI = \%inconsistent OMS end  & PropositionalExamples \\\hline
 oms IRI = \%mono OMS end  & section~\ref{spec-1} \\\hline
 oms IRI = \%def OMS end  & PropositionalExamples \\\hline
 network IRI = IRI, \ldots, IRI & Alignments \\\hline
-network IRI = IRI, \ldots, IRI & \\
-\qquad excluding IRI, \ldots, IRI -> IRI & \\\hline
+%network IRI = IRI, \ldots, IRI & \\
+%\qquad excluding IRI, \ldots, IRI -> IRI & \\\hline
 interpretation IRI : OMS to OMS = SymbolMap  & Mereology \\\hline
 interpretation IRI : OMS to OMS = \%cons SymbolMap  &  Engine\\\hline
 interpretation IRI : OMS to OMS = translation IRI  & Mereology \\\hline
@@ -7829,23 +7829,23 @@ entailment IRI = OMSName in Network entails OMS & ATM\\\hline
 entailment IRI = Network entails Network & ATM\\\hline
 equivalence IRI : OMS \lessthan-\greaterthan\ OMS = OMS end  &  Algebra \\\hline
 %equivalence IRI : Network \lessthan-\greaterthan\ Network = Network end  &  \\\hline
-module IRI : OMS of OMS for Symbols  &  \\\hline
-module IRI \%ccons : OMS of OMS for Symbols  &  \\\hline
-alignment IRI : OMS to OMS end  &  \\\hline
-alignment IRI 1 : OMS to OMS end  &  \\\hline
-alignment IRI ? : OMS to OMS end  &  \\\hline
-alignment IRI + : OMS to OMS end  &  \\\hline
-alignment IRI * : OMS to OMS end  &  \\\hline
+module IRI : OMS of OMS for Symbols  & GalenModule \\\hline
+%module IRI \%ccons : OMS of OMS for Symbols  &  \\\hline
+%alignment IRI : OMS to OMS end  &  \\\hline
+%alignment IRI 1 : OMS to OMS end  &  \\\hline
+%alignment IRI ? : OMS to OMS end  &  \\\hline
+%alignment IRI + : OMS to OMS end  &  \\\hline
+%alignment IRI * : OMS to OMS end  &  \\\hline
 alignment IRI : OMS to OMS = Correspondences  & Alignments \\\hline
 alignment IRI : OMS to OMS = Correspondences & \\
-\qquad assuming SingleDomain &  \\\hline
+\qquad assuming SingleDomain & \cite{OM2014} \\\hline
 alignment IRI : OMS to OMS = Correspondences & \\
-\qquad assuming GlobalDomain &  \\\hline
+\qquad assuming GlobalDomain & \cite{OM2014} \\\hline
 alignment IRI : OMS to OMS = Correspondences & \\
-\qquad assuming ContextualizedDomain &  \\\hline
-query IRI = select ars where Sen in OMS & \\\hline
-substitution IRI : OMS to OMS = SymbolMap & \\\hline
-result IRI = IRIs for IRI & \\\hline
+\qquad assuming ContextualizedDomain & \cite{OM2014} \\\hline
+query IRI = select ars where Sen in OMS & MyQuery\\\hline
+substitution IRI : OMS to OMS = SymbolMap & MyQuery\\\hline
+result IRI = IRIs for IRI & MyQuery\\\hline
 \end{tabular}
 
 \begin{tabular}{|l|l|}\hline
@@ -7853,50 +7853,50 @@ result IRI = IRIs for IRI & \\\hline
 \textbf{OMS notation} & \textbf{Examples} \\\hline
 BasicOMS  & Alignments, Mereology \\\hline
 IRI  & Alignments, Mereology \\\hline
-IRI \%( IRI )\%  &  \\\hline
+%IRI \%( IRI )\%  &  \\\hline
 minimize \{ OMS \}  & BlocksWithCircumscription \\\hline
 OMS minimize Symbols var Symbols  & BlocksWithCircumscription \\\hline
-OMS maximize Symbols var Symbols  &  \\\hline
-OMS then minimize { OMS } &  \\\hline
-OMS then maximize { OMS } &  \\\hline
-OMS then free { OMS } &  \\\hline
-OMS then cofree { OMS } &  \\\hline
+OMS maximize Symbols var Symbols  & BlocksWithCircumscription \\\hline
+%OMS then minimize \{ OMS \} &  \\\hline
+%OMS then maximize \{ OMS \} &  \\\hline
+free \{ OMS \} & Datatypes \\\hline
+cofree \{ OMS \} & Datatypes \\\hline
 OMS with SymbolMap  & Alignments,  section~\ref{spec-1} \\\hline
 OMS with translation IRI  & Mereology \\\hline
-OMS with translation IRI : IRI $\to$ IRI  &  \\\hline
-OMS with translation IRI $\to$ IRI  &  \\\hline
-OMS with translation $\to$ IRI  &  \\\hline
+%OMS with translation IRI : IRI $\to$ IRI  &  \\\hline
+%OMS with translation IRI $\to$ IRI  &  \\\hline
+%OMS with translation $\to$ IRI  &  \\\hline
 OMS hide SymbolItems  &  Algebra \\\hline
-OMS reveal Symbols  &  \\\hline
-OMS reveal Symbol |-> Symbol ...  &  \\\hline
-OMS hide along IRI  &  \\\hline
-OMS hide along IRI : IRI $\to$ IRI  &  \\\hline
-OMS hide along IRI $\to$ IRI  &  \\\hline
-OMS hide along $\to$ IRI  &  \\\hline
-OMS extract Symbols  &  \\\hline
+OMS reveal Symbols  & Datatypes \\\hline
+%OMS reveal Symbol |-> Symbol ...  &  \\\hline
+OMS hide along IRI  & ATM \\\hline
+%OMS hide along IRI : IRI $\to$ IRI  &  \\\hline
+%OMS hide along IRI $\to$ IRI  &  \\\hline
+%OMS hide along $\to$ IRI  &  \\\hline
+OMS extract Symbols  & GalenModule \\\hline
 OMS remove Symbols  & All\_kinds\_of\_group\_specifications \\\hline
 OMS forget Symbols  & All\_kinds\_of\_group\_specifications \\\hline
-OMS forget Symbols keep Logic  &  \\\hline
-OMS keep Symbols  &  \\\hline
-OMS keep Symbols keep Logic &  \\\hline
-OMS select BasicOMS  &  \\\hline
+%OMS forget Symbols keep Logic  &  \\\hline
+OMS keep Symbols  & All\_kinds\_of\_group\_specifications \\\hline
+%OMS keep Symbols keep Logic &  \\\hline
+OMS select BasicOMS  & All\_kinds\_of\_group\_specifications  \\\hline
 OMS reject BasicOMS  & All\_kinds\_of\_group\_specifications \\\hline
-OMS and OMS   &  \\\hline
+OMS and OMS   & Engine \\\hline
 OMS then OMS  & Mereology \\\hline
-OMS then \%ccons OMS  &  \\\hline
-OMS then \%ccons \%( IRI )\% OMS  &  \\\hline
-OMS then \%mcons OMS  &  \\\hline
-OMS then \%notccons OMS  &  \\\hline
-OMS then \%notmcons OMS  &  \\\hline
+OMS then \%ccons OMS  &  \cite{DBLP:conf/ijcai/LutzWW07} \\\hline
+%OMS then \%ccons \%( IRI )\% OMS  &  \\\hline
+OMS then \%mcons OMS  & Propositional \\\hline
+OMS then \%notccons OMS  & \cite{DBLP:conf/ijcai/LutzWW07} \\\hline
+OMS then \%notmcons OMS  & \cite{DBLP:conf/ijcai/LutzWW07} \\\hline
 OMS then \%mono OMS  & Sorting \\\hline
-OMS then \%wdef OMS  &  \\\hline
-OMS then \%def OMS  &  \\\hline
+%OMS then \%wdef OMS  &  \\\hline
+OMS then \%def OMS  & Persons \\\hline
 OMS then \%implied OMS  &  BlocksWithCircumscription \\\hline
-logic IRI : OMS  &  \\\hline
-language IRI : OMS  &  \\\hline
-serialization IRI : OMS  &  \\\hline
+logic IRI : OMS  &  all examples\\\hline
+language IRI : OMS  &  Mereology\\\hline
+serialization IRI : OMS  & Mereology \\\hline
 combine NetworkElements  & Alignments, Publications \\\hline
-combine NetworkElements excluding IRIs  &  \\\hline
+%combine NetworkElements excluding IRIs  &  \\\hline
 \end{tabular}
 
 \sclause{Simple Examples in Propositional Logic}
@@ -7959,7 +7959,7 @@ end
 
 %% diagnosis derived from symptoms
 spec EngineDiagnosis = EngineSymptoms
-then %cons
+then %mcons
   props carbon_deposits,
 	clogged_filter,
 	clogged_radiator,
@@ -8162,6 +8162,24 @@ ontology Blocks_Alternative =
 	SubClassOf: Ontable 
         %% Normally, a block is on the table
   minimize Abnormal var Ontable, BlockNotAbnormal
+then %implied
+  Individual: B2 Types: Ontable
+     %% B2 is on the table
+end
+
+ontology Blocks_Alternative2 =
+  Class: Block
+  Class: Normal
+  Individual: B1 Types: Block, not Normal
+  Individual: B2 Types: Block DifferentFrom: B1
+              %% B1 and B2 are different blocks
+              %% B1 is abnormal
+  Class: Ontable 
+  Class: NormalBlock
+  	EquivalentTo: Block and Normal 
+	SubClassOf: Ontable 
+        %% Normally, a block is on the table
+  maximize Normal var Ontable, BlockNotAbnormal
 then %implied
   Individual: B2 Types: Ontable
      %% B2 is on the table
@@ -8452,22 +8470,30 @@ is conservative.
 
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,sort,ops,spec,forget},escapechar=@,mathescape]
 logic CASL
-spec Group_via_interpolation =
+spec Group_via_interpolation1 =
   Group_with_inverse forget inv
 end
+spec Group_via_interpolation2 =
+  Group_with_inverse keep Elem, 0, __+__
+end
 \end{lstlisting}
-The semantics is \syntax{Group\_with\_implicit\_inverse}.
-Computing interpolants can be hard, even undecidable.
+Both specifications are equivalent, and they 
+are equivalent to \syntax{Group\_with\_implicit\_inverse}.
+%Computing interpolants can be hard, even undecidable.
 \medskip
 
 \sssclause{Groups and Filtering}
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,sort,ops,spec,forget},escapechar=@,mathescape]
 logic CASL
-spec Group_via_ =
+spec Group_via_Filtering_1 =
   Group_with_inverse reject inv
 end
+spec Group_via_Filtering_2 =
+  Group_with_inverse select Elem, 0, __+__
+end
 \end{lstlisting}
-The semantics is the following theory which just omits the inverse
+Both specifications are equivalent, and they are equivalent 
+to the following theory which just omits the inverse
 axioms (and hence does not specify groups):
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,sort,ops,spec,forget},escapechar=@,mathescape]
 logic CASL
@@ -8656,6 +8682,41 @@ end
 substitution MySubst : { Person then op x:Person } to Person = x |-> max
 end
 result MyResult = MySubst for MyQuery
+\end{lstlisting}
+
+\sclause{Datatypes}
+
+\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,sort,ops,in,approximate,extract,free,cofree,spec},escapechar=@,mathescape]
+library Datatypes
+logic CASL
+
+spec Bag =
+  sort Elem
+  then free {
+     sort Bag
+     ops mt:Bag;
+         __union__:Bag*Bag->Bag, assoc, comm, unit mt
+           }
+end
+
+spec Stream =
+  sort Elem
+  then cofree {
+     sort Stream
+     ops head:Stream->Elem;
+         tail:Stream->Stream
+           }
+end
+
+spec Finite =
+  sort Elem
+  free type Nat ::= 0 | suc(Nat)
+  op f: Nat ->? Elem
+  . forall x:Elem . exists n:Nat . f(n)=x           %(f_surjective)%
+  . exists n:Nat . forall m:Nat . def f(m) => m<n   %(f_bounded)%
+  reveal Elem
+end
+
 \end{lstlisting}
 
 \infannex{Use cases}\label{a:use-cases}
