--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -636,3 +636,31 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
     year = {2008}
 }
 
+
+
+@inproceedings{DBLP:conf/ijcai/LutzWW07,
+  author    = {Carsten Lutz and
+               Dirk Walther and
+               Frank Wolter},
+  title     = {Conservative Extensions in Expressive Description Logics},
+  booktitle = {{IJCAI} 2007, Proceedings of the 20th International Joint Conference
+               on Artificial Intelligence, Hyderabad, India, January 6-12, 2007},
+  pages     = {453--458},
+  year      = {2007},
+  crossref  = {DBLP:conf/ijcai/2007},
+  url       = {http://dli.iiit.ac.in/ijcai/IJCAI-2007/PDF/IJCAI07-071.pdf},
+  timestamp = {Fri, 11 Nov 2011 07:58:39 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/ijcai/LutzWW07},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@proceedings{DBLP:conf/ijcai/2007,
+  editor    = {Manuela M. Veloso},
+  title     = {{IJCAI} 2007, Proceedings of the 20th International Joint Conference
+               on Artificial Intelligence, Hyderabad, India, January 6-12, 2007},
+  year      = {2007},
+  timestamp = {Fri, 19 Dec 2008 17:01:54 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/ijcai/2007},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
