Capitalisation of section headings harmonised

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1034,7 +1034,7 @@ This is left for future work.
 
 \clearpage
 
-\section{Issues to be discussed}
+\section{Issues to be Discussed}
 
 \begin{center}
 \begin{longtable}{|p{0.09\textwidth}|p{0.42\textwidth}|p{0.42\textwidth}|}
@@ -1247,7 +1247,7 @@ diagram. Also a DOL OMS network, containing interpretations, alignments between 
 level M1. The specification of DOL  lives at M2, like the UML specification. Both are written in
 MOF.}
 
-\section{Features within Scope}\index{\dolindex ! scope}
+\section{Features Within Scope}\index{\dolindex ! scope}
 % Can't use \begin{inscope}, as that creates an itemize environment
 The following are within the scope of this \IS:
 \begin{enumerate}
@@ -1421,7 +1421,7 @@ symbol) in the source \should be attached to its translation in the
 target (if there are more than one sentences (resp.\ symbols)
 expressing the translation, to at least one of them).
 
-\sclause{Conformance of a Serialization of an OMS Language with DOL}\label{c:conform:serialization}
+\sclause{Conformance of a Serialization of an OMS Language With DOL}\label{c:conform:serialization}
 \begin{fminipage}{\textwidth}
 \textbf{Rationale}: The main reason for the following specifications is identifier injection. DOL is capable
 of assigning identifiers to entities (symbols, axioms, modules, etc.) inside fragments of OMS
@@ -1539,7 +1539,7 @@ Any conforming serialization of an OMS language shall have a machine-processable
 For any conforming OMS language, logic, and serialization of an OMS language, it is required that it be assigned an HTTP IRI, by which it can be identified.  It is also required that a machine-processable description of this language/logic/serialization be retrievable by dereferencing this IRI, according to the linked data principles.  At least there has to be an RDF description in terms of the vocabulary specified in \aref{a:lola}, which has to be made available in the RDF/XML serialization when a client requests content of the MIME type \mimetype{application/rdf+xml}.  Descriptions of the language/logic/serialization in further representations, having different content types, may be provided.\CLnote[type=fyi]{that opens the door for, \eg, OMDoc}
 
 
-\sclause{Conformance of a Document with DOL}\label{c:conform:document}
+\sclause{Conformance of a Document With DOL}\label{c:conform:document}
 \begin{fminipage}{\textwidth}
 \textbf{Rationale}: for exchanging DOL documents with other users/tools, nothing that has a formal semantics
 must be left implicit.  One DOL tool may assume that by default any OMS fragments inside a DOL
@@ -1559,7 +1559,7 @@ However, details about aspects of an OMS that do not have a formal, logic-based 
 left implicit.  For example, a conforming document may omit explicit references to matching
 algorithms that have been employed in obtaining an alignment.
 
-\sclause{Conformance of an Application with DOL}\label{c:conform:application}
+\sclause{Conformance of an Application With DOL}\label{c:conform:application}
 
 In practice, DOL-aware \emph{applications} may also deal with documents that are not conforming 
 with DOL according to the criteria established in \cref{c:conform:document}.  However, an 
@@ -2512,7 +2512,7 @@ using the OWL 2 RDF-Based Semantics \cite{W3C:REC-owl2-rdf-based-semantics-20091
 \section{Changes to Adopted OMG Specifications}
 This specification does not require or request any change to any other OMG specification. 
 
-\section{How to Read this Specification}
+\section{How to Read This Specification}
 The initial eight chapters of this specification are \emph{informative} providing  a high-level
  summary of usage scenarios and goals (Chapter \ref{c:goal}) and an overview over the design of
 \DOL  (Chapter \ref{c:design}).
@@ -2749,7 +2749,7 @@ between OMS as part of OMS networks in a semantically well-defined way. Thus, to
 %
 %These challenges can be illustrated by the following set of use cases:
 
-\section{Use Case Onto-1: Interoperability between OWL and FOL ontologies}
+\section{Use Case Onto-1: Interoperability Between OWL and FOL ontologies}
 
 In order to achieve interoperability, during ontology development it is often necessary to describe 
 concepts in a language more expressive than OWL.  Therefore, it is common practice to informally 
@@ -2787,7 +2787,7 @@ then
 \end{lstlisting}
 \OWL can express transitivity, but not together with asymmetry.
 
-\section{Use Case Onto-2: Ontology integration by means of a foundational ontology}
+\section{Use Case Onto-2: Ontology Integration by Means of a Foundational Ontology}
 One major use case for ontologies in industry is to achieve interoperability and data integration. 
 However, if ontologies are developed independently and used  within the same domain, the 
 differences between the ontologies may actually impede interoperability. One strategy to avoid this 
@@ -2860,7 +2860,7 @@ ontology Space =
  combine BFO2GFO, DolceLite2GFO, DolceLite2BFO
 \end{lstlisting} 
 
-\section{Use Case Onto-3: Module extraction from large ontologies}
+\section{Use Case Onto-3: Module Extraction From Large Ontologies}
 Especially in the biomedical domain, ontologies tend to become very large (e.g., SNOMED CT, FMA) 
 with over 100000 concepts and relationships. Yet, none of these ontologies covers all aspects of a 
 domain, and frequently provide coverage at various levels of specificity, with excessive detail in 
@@ -2886,7 +2886,7 @@ integration.
 
  
 
-\section{Use Case Onto-4: Interoperability between closed-world data and open-world metadata}
+\section{Use Case Onto-4: Interoperability Between Closed-World Data and Open-World Metadata}
 Data collection has become easier and much more widespread over the years. This data has to be 
 assigned a meaning somehow, which occurs traditionally in the  form of metadata annotations. For 
 instance, consider geographical datasets derived from satellite data and raw sensor readings. 
@@ -2912,7 +2912,7 @@ sciences.
 
 DOL  provides the framework for expressing such bridge rules in a systematic way, maintaining these, and building tools for them. 
 
-\section{Use Case Onto-5: Verification of rules translating Dublin Core into PROV}
+\section{Use Case Onto-5: Verification of Rules Translating Dublin Core Into PROV}
 The Dublin Core Metadata terms, which have been formalized as an RDF Schema vocabulary, developed initially by the digital library community, are less 
 comprehensive but more widely used than PROV (cf. Use Case Onto-1). The rules for translating Dublin Core to the OWL subset of PROV (and, with restrictions, 
 vice versa) are not known to yield valid instances of the PROV data model, i.e. they are not known to yield OWL ontologies consistent with respect to the OWL axioms that 
@@ -2925,7 +2925,7 @@ The Dublin Core to PROV ontology translation%
 SPARQL has a formal specification of the evaluation semantics of its algebraic expressions, which is different from the model-theoretic semantics of the OWL and RDFS languages; nevertheless SPARQL CONSTRUCT is a popular and immediately executable syntax for expressing translation rules between ontologies in RDF-based languages in a subset of FOL.
 DOL  not only supports the reuse of the existing Dublin Core RDFS and PROV OWL ontologies as modules of a distributed ontology (= OMS network), but it is also able to support the description of the FOL translation rules in a sufficiently expressive ontology language, e.g. Common Logic, and thus enable formal verification of the translation from Dublin Core to PROV.
 
-\section{Use Case Spec-1: Specification refinements}\label{spec-1}
+\section{Use Case Spec-1: Specification Refinements}\label{spec-1}
 Especially in safety-critical areas such as medical systems, the automotive industry, avionics and the aerospace industry, but also for microprocessor design, often 
 a formal software and hardware development process is used in order to ensure the correct functioning of systems. Typically, a requirement specification is refined 
 into a design specification and then an implementation, often involving several intermediate steps (see, e.g. the V-model [V-model], although this does not require 
@@ -2999,7 +2999,7 @@ refinement R3''' = R1 then R2
 
 \end{lstlisting}
 
-\section{Use Case Spec-2: Modularity of specifications}\label{spec-2}
+\section{Use Case Spec-2: Modularity of Specifications}\label{spec-2}
 In the context of use case Spec-1, often specifications become so large that it is necessary to structure them in a modular way, both for human readability, 
 maintainability, and for more efficient tool support. The lack of a standard for such modular structuring hinders interoperability among different development efforts 
 and the reuse of specifications.
@@ -3044,7 +3044,7 @@ then
 end
 \end{lstlisting}
 
-\section{Use Case Model-1: Coherent semantics for multi-language models}
+\section{Use Case Model-1: Coherent Semantics for Multi-Language Models}
 \ednote{Isn't this one about ontologies,too?}
 	
 Often a single problem area within a given domain must be described using several formalisms, due to user community requirements, expressiveness, tool support 
@@ -3068,7 +3068,7 @@ With DOL, one can, e.g.,
 \end{itemize}
 Note that the last point does not specify what information is lost in the approximation. Indeed, DOL provides the means to specify requirements on the approximation, e.g., that it maximally preserves the information. 
 
-\section{Use Case Model-2: Consistency among UML diagrams of different types}
+\section{Use Case Model-2: Consistency Among UML Diagrams of Different Types}
 
 A typical UML model involves diagrams of different types. Such UML models may have intrinsic errors because diagrams of different types may specify conflicting 
 requirements. Typical questions that arise in this context are, e.g.,
@@ -3086,7 +3086,7 @@ consistency. Under some restrictions, the proof of semantic consistency can be (
 Once a formal semantics for the different diagram types has been chosen (see, e.g. \cite{knapp-mossakowski-roggenbach:corr:2014}), it is possible to use DOL to specify in which 
 sense the diagrams need to be consistent, and check this by suitable tools.
 
-\section{Use Case Model-3: Refinements between UML diagrams of different types, and their reuse}
+\section{Use Case Model-3: Refinements Between UML Diagrams of Different Types, and Their Reuse}
 A problem is a lack of reusability of refinements: Consider a controller for an elevator, which is specified with a UML protocol state machine, enriched with UML 
 sequence diagrams and OCL constraints. Assume further that this model is not directly implemented, but first refined to a UML behavior state machine (which then 
 can be automatically or semi-automatically transformed into some implementation using standard UML tools). However, there is no standardized language to 
@@ -3359,7 +3359,7 @@ OMS mappings, OMS networks, and other DOL expressions is defined using model-the
 on top of institutions. 
 
 
-\section{DOL enables expression of logically heterogeneous OMS and literal reuse of existing OMS.}
+\section{DOL enables Expression of Logically Heterogeneous OMS and Literal Reuse of Existing OMS.}
 DOL is a mechanism for expressing logically heterogeneous OMS. It can be used to combine sentences and structured OMS expressed in different conforming OMS languages
 and logics into single documents or modules. With DOL, sentences or structured OMS of previously existing OMS in
 conforming languages can be reused by literally including them into a DOL OMS. A minimum of wrapping constructs and other annotations (e.g., for identifying the language of a sentence) are provided. 
@@ -3387,7 +3387,7 @@ implicitly apply as many default translations as possible, and to
 concentrate on making explicit only those translations that deviate
 from the default.
 
-\section{DOL includes provisions for expressing mappings between OMS.}\label{c:req:links}
+\section{DOL Includes Provisions for Expressing Mappings Between OMS.}\label{c:req:links}
 
 DOL provides a syntax for expressing mappings between OMS.  One use case illustrating both is sketched in  \fref{f:DOL-mapping}.  OMS mappings supported by DOL include:
 \begin{itemize}
@@ -3427,7 +3427,7 @@ the rule for \syntax{combination} for the abstract syntax category
 
 ~\todonote[author=Christoph Lange,date=D:201110060000+02'00',type=todo]{ask Michael Gr{\"u}ninger for his mereology example in CL}
 
-\section{DOL provides a mechanism for rich annotation and documentation of OMS.}\label{c:req:annotation}
+\section{DOL Provides a Mechanism for Rich Annotation and Documentation of OMS.}\label{c:req:annotation}
 
 DOL provides a mechanism for identifying anything of relevance in OMS by assigning an IRI to it.  With RDF there is a standard mechanism for annotating things identified by IRIs.  Thus, DOL supports  annotations in the full generality specified in \cref{c:terms-annotation}.  The DOL serializations further support the fine-grained embedding of annotations into OMS. % up to the granularity of literate programming.
 
@@ -6349,7 +6349,7 @@ special cases to be described
 
 \appendix
 
-\chapter[LoLa RDF vocabulary]{Annex (normative): LoLa, an RDF vocabulary for describing Logics and OMS Languages conforming with DOL}\label{a:lola}
+\chapter[LoLa RDF Vocabulary]{Annex (normative): LoLa, an RDF vocabulary for describing Logics and OMS Languages conforming with DOL}\label{a:lola}
 
 \begin{figure}
   \centering
@@ -7460,7 +7460,7 @@ abbreviations for two inequations using ``$\leq$''.
 \end{example}
 
 
-\section{Satisfaction relation.}
+\section{Satisfaction Relation.}
 The satisfaction relation is inherited from Common Logic, using
 a translation $\CL(\_)$ of multiplicity formulas to Common Logic.
 That is, given a UML class and object diagram $\Sigma$, a
@@ -8533,7 +8533,7 @@ hide permutation, is_ordered
 
 
 
-\sclause{Model-driven Development}
+\sclause{Model-Driven Development}
 
 We present as a small example in model-deriven development using UML,
 taken from \cite{knapp-mossakowski-roggenbach:corr:2014}.  It involves
@@ -9000,8 +9000,6 @@ effort API4KB.
 
 \newpage
 \clearpage
-%\clause{Keyword index}
-%/to be supplemented in the final version/
 
 %\backmatter 
 \printindex
