more cleaning up of heading capitalisation - now ssclauses and sssclauses are not capitalised

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4321,7 +4321,7 @@ The character set for the DOL text serialization is the UTF-8 encoding of Unicod
 
 The lexical symbols of the DOL text serialization include various key words and signs that occur as terminal symbols in the context-free grammar in \aref{a:dol-text:concrete}.  Key words and signs that represent mathematical signs are displayed as such, when possible, and those signs that are available in the Unicode character set may also be used for input.
 
-\sssclause{Key Words}
+\sssclause{Key words}
 
 Key words are always written lowercase. The following key words are reserved, and are not available for use as variables or as CURIEs with no prefix\footnote{In such a case, one can still rename affected variables, or declare a prefix binding for affected CURIEs, or use absolute IRIs instead.  None of these rewritings changes the semantics.}, although they can be used as parts of tokens. 
 
@@ -4415,7 +4415,7 @@ language
 import
 }
 
-\sssclause{Key Signs}
+\sssclause{Key signs}
 
 Table~\ref{tab:key-signs} following key signs are reserved, and are not available for use as complete identifiers.  Key signs that are outside of the Basic Latin subset of Unicode may alternatively be encoded as a sequence of Basic Latin characters.
 
@@ -7633,7 +7633,7 @@ $(s,p,o)$ is translated to the \SROIQ(D) sentence
 
 \sclause{$\OWL \rightarrow FOL$}
 
-\ssclause{Translation of Signatures}
+\ssclause{Translation of signatures}
 
  $\Phi((\Concepts, \Roles, \Individuals)) =  (F, P)$ with
 \begin{itemize}
@@ -7642,7 +7642,7 @@ $(s,p,o)$ is translated to the \SROIQ(D) sentence
 \end{itemize}
 
 
-\ssclause{Translation of Sentences}
+\ssclause{Translation of sentences}
 
 Concepts are translated as follows:
 \begin{itemize}
@@ -7685,7 +7685,7 @@ $ \forall x,y . (\exists z_1,\ldots z_{n-1} . R_1(x,z_1) \wedge R_2(z_1,z_2) \we
 
 
 
-\ssclause{Translation of Models}
+\ssclause{Translation of models}
 
 \begin{itemize}
 	\item For $M' \in \Models^{FOL}(\Phi \Sigma)$ define $\beta_\Sigma(M') := (\Delta, \cdot^I)$
@@ -8400,7 +8400,7 @@ end
 
 \ssclause{Groups specified with different forms of hiding and forgetting}
 
-\sssclause{Groups and Hiding}
+\sssclause{Groups and hiding}
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,sort,ops,spec},escapechar=@,mathescape]
 library All_kinds_of_group_specifications
 logic CASL
@@ -8433,7 +8433,7 @@ spec Group_in_second_order_logic =
 end
 \end{lstlisting}
 
-\sssclause{Groups and Module Extraction}
+\sssclause{Groups and module extraction}
 
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,sort,ops,spec,forget},escapechar=@,mathescape]
 logic CASL
@@ -8482,7 +8482,7 @@ are equivalent to \syntax{Group\_with\_implicit\_inverse}.
 %Computing interpolants can be hard, even undecidable.
 \medskip
 
-\sssclause{Groups and Filtering}
+\sssclause{Groups and filtering}
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,sort,ops,spec,forget},escapechar=@,mathescape]
 logic CASL
 spec Group_via_Filtering_1 =
