--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1261,6 +1261,7 @@ and sentences;
 \item a syntax for embedding the constructs mentioned under (\ref{it:scope-heterogeneous})–(\ref{it:scope-annotation}) as annotations into existing OMS;
 \item a syntax for expressing (\ref{it:scope-heterogeneous})–(\ref{it:scope-translation}) as standoff markup that points into existing OMS;
 \item a formal semantics of (\ref{it:scope-heterogeneous})–(\ref{it:scope-translation});
+\item structuring constructs for modeling non-monotonic behaviour; 
 \item criteria for existing or future OMS languages to conform with DOL.
 \end{enumerate}
 
@@ -1273,7 +1274,9 @@ stating sentences about them;
 \item concrete OMS and their conceptualization and application;
 %% I believe that this is really obsolete now. –Christoph Lange, 2011-12-13
 % \item a formal definition of interoperability and how to measure the degree of interoperability of two systems\todonote[author=Christoph Lange,date=D:201110182133+02'00']{Well, now this might even be in scope.  We'll see...}
-\item mappings between services and devices, and definitions of service and device interoperability.
+\item mappings between services and devices, and definitions of service and device interoperability;
+\item non-monotonic logics\footnote{Logics (formalised as institutions) are necessarily monotonic; conformance criteria for non-monotonic logics arestill under development. However, minimization provides non-monotonic reasoning in DOL. It is also possible to include non-monotonic logics by construing entailments between formulas as sentences of the institution.}. 
+
 \end{enumerate}
 
 This \IS describes the syntax and the semantics of the Distributed Ontology, Model and
@@ -1354,7 +1357,6 @@ the abstract syntax of the OMS language to signatures and sentences
 of the institution.
 % It may additionally be presented as an institution, leading
 %to the possibility of interpreting additional DOL language constructs.%
-%\footnote{Institutions are necessarily monotonic; conformance criteria for non-monotonic logics arestill under development. However, minimization provides non-monotonic reasoning in DOL. It is also possible to include non-monotonic logics by construing entailments between formulas as sentences of the institution.} 
 Note that one OMS language can have several sublanguages or profiles 
 corresponding to several logics (for example, OWL 2 has profiles EL, RL and QL, apart from the
 whole OWL 2 itself).
