--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2606,19 +2606,26 @@ The following organizations are supporting this specification:
 \subsection{Participants}
 The following people contributed directly to the development of this specification. 
 	\begin{itemize}
-	\item Tara Athan, Athan Services 
-	\item Conrad Bock, National Institute of Standards and Technology  
-	\item Mihai Codescu, Otto-von-Guericke University Magdeburg 
-	\item Michael Gruninger, University of Toronto  
-	\item Andreas Hoffmann, Fraunhofer FOKUS 
-	\item Maria Keet, University of Cape Town 
-	\item Elisa Kendall,  Thematix Partners LLC	
-	\item Oliver Kutz, Otto-von-Guericke University Magdeburg  
-	\item Christoph Lange, University of Bonn and Fraunhofer IAIS
-	\item Terry Longstreth, Independent Consultant 	
-	\item Till Mossakowski, Otto-von-Guericke University Magdeburg  	
-	\item Fabian Neuhaus, Otto-von-Guericke University Magdeburg  
-	\item Leo Obrst, MITRE  
+	\item Tara Athan, Athan Services, USA 
+	\item Conrad Bock, National Institute of Standards and Technology, USA
+	\item Mihai Codescu, Otto-von-Guericke University Magdeburg, Germany 
+        \item Martin Glauer, Otto-von-Guericke University Magdeburg, Germany
+	\item Michael Gruninger, University of Toronto, Canada  
+        \item Stephan Günther, Otto-von-Guericke University Magdeburg, Germany
+        \item Maria Hedblom, Otto-von-Guericke University Magdeburg, Germany
+	\item Andreas Hoffmann, Fraunhofer FOKUS, Germany 
+        \item Yazmin Angelica Iba\~nez, University of Bremen
+	\item Maria Keet, University of Cape Town, South Africa 
+	\item Elisa Kendall, Thematix Partners LLC, USA	
+        \item Alexander Knapp, University of Augsburg, Germany
+	\item Oliver Kutz, Free University of Bolzano, Italy
+	\item Christoph Lange, University of Bonn and Fraunhofer IAIS, Germany
+	\item Terry Longstreth, Independent Consultant, USA 	
+	\item Till Mossakowski, Otto-von-Guericke University Magdeburg, Germany  	
+	\item Fabian Neuhaus, Otto-von-Guericke University Magdeburg, Germany  	  
+	\item Leo Obrst, MITRE, USA
+        \item Madhura Thosar, Otto-von-Guericke University Magdeburg, Germany
+   
 	\end{itemize}
 %	
 
