--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -8881,7 +8881,8 @@ to the term \termref{structured OMS} in this \IS}
 \infannex{Tools for DOL}\label{a:tools}
 
 \sclause{The Heterogeneous Tool Set (Hets)}\label{a:hets} The
-Heterogeneous Tool Set (Hets) is a parsing, analysis and proof tool
+Heterogeneous Tool Set (Hets) is the reference implementation of
+DOL. Hets a parsing, analysis and proof tool
 for OMS, OMS networks and OMS mappings written in DOL and
 DOL-conforming languages.  It supports a wide range of OMS languages
 and language translations, in particular OWL, RDF, Common Logic,
@@ -8983,7 +8984,7 @@ an XML and a JSON version for processing with tools.
 \sclause{APIs}\label{c:APIs}
 
 Both Hets and Ontohub/Modelhub/Spechub provide APIs for the interchange
-with other tools. Ontohub/Modelhub/Spechub also provides an API for
+with other tools\footnote{See \url{https://github.com/spechub/hets/wiki} and \url{https://github.com/ontohub/ontohub/wiki/}.}. Ontohub/Modelhub/Spechub also provides an API for
 exchange with other instances, so that e.g.\ Ontohub and Modelhub
 can exchange information about available repositories and their OMS.
 
