--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -6,11 +6,6 @@
 
 
 %todo
-% %(in)consistent
-% precedences of operators. 'bridge' binds weakest
-% explain: extensions for small additions, unions for sums of large OMS
-% %safe as synonym for %cons
-% in grammar, use NT+
 % language/logic/mapping registration process - maybe in a different document
 
 % more useful EBNF (see CASL RefMan)
@@ -2609,6 +2604,7 @@ The following people contributed directly to the development of this specificati
 	\item Tara Athan, Athan Services, USA 
 	\item Conrad Bock, National Institute of Standards and Technology, USA
 	\item Mihai Codescu, Otto-von-Guericke University Magdeburg, Germany 
+        \item Daniel Couto Vale, University of Bremen, Germany
         \item Martin Glauer, Otto-von-Guericke University Magdeburg, Germany
 	\item Michael Gruninger, University of Toronto, Canada  
         \item Stephan Günther, Otto-von-Guericke University Magdeburg, Germany
@@ -2621,6 +2617,7 @@ The following people contributed directly to the development of this specificati
 	\item Oliver Kutz, Free University of Bolzano, Italy
 	\item Christoph Lange, University of Bonn and Fraunhofer IAIS, Germany
 	\item Terry Longstreth, Independent Consultant, USA 	
+        \item Christian Maeder, Jacobs-University Bremen, Germany
 	\item Till Mossakowski, Otto-von-Guericke University Magdeburg, Germany  	
 	\item Fabian Neuhaus, Otto-von-Guericke University Magdeburg, Germany  	  
 	\item Leo Obrst, MITRE, USA
