added language family

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1684,8 +1684,16 @@ plus non-logical annotations\index{annotation}.}
   An OMS language is used for the formal specification of \termref{OMS}.
   \end{note}
   \begin{example}
-    OMS languages include OWL 2 DL, Common Logic, F-logic, UML class diagrams, RDFS, and OBO.
+    OMS languages include OWL 2 DL, Common Logic Interchange Format (CLIF), F-logic, UML class diagrams, RDFS, and OBO.
   \end{example}
+
+
+
+\termdefinition{OMS language family}{a set of OMS languages, whose abstract syntax is very similar but differ either with respect to expressivity or semantics.}
+  \begin{example}
+ OWL 2 EL, OWL 2 QL, OWL 2 RL are members of the OWL 2 language family. Common Logic Interchange Format (CLIF) and  Conceptual Graph Interchange Format (CGIF) are members of the Common Logic language family.
+  \end{example}
+
 
 
   \termdefinitionLight{\termref{non-logical symbol}\synonym OMS symbol\index{OMS symbol|see {OMS symbol}
