Remove '.'s at the end of titles.
Task raised during the discussion of issue #116.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3373,7 +3373,7 @@ OMS mappings, OMS networks, and other DOL expressions is defined using model-the
 on top of institutions. 
 
 
-\section{DOL enables Expression of Logically Heterogeneous OMS and Literal Reuse of Existing OMS.}
+\section{DOL enables Expression of Logically Heterogeneous OMS and Literal Reuse of Existing OMS}
 DOL is a mechanism for expressing logically heterogeneous OMS. It can be used to combine sentences and structured OMS expressed in different conforming OMS languages
 and logics into single documents or modules. With DOL, sentences or structured OMS of previously existing OMS in
 conforming languages can be reused by literally including them into a DOL OMS. A minimum of wrapping constructs and other annotations (e.g., for identifying the language of a sentence) are provided. 
@@ -3401,7 +3401,7 @@ implicitly apply as many default translations as possible, and to
 concentrate on making explicit only those translations that deviate
 from the default.
 
-\section{DOL Includes Provisions for Expressing Mappings Between OMS.}\label{c:req:links}
+\section{DOL Includes Provisions for Expressing Mappings Between OMS}\label{c:req:links}
 
 DOL provides a syntax for expressing mappings between OMS.  One use case illustrating both is sketched in  \fref{f:DOL-mapping}.  OMS mappings supported by DOL include:
 \begin{itemize}
@@ -3441,7 +3441,7 @@ the rule for \syntax{combination} for the abstract syntax category
 
 ~\todonote[author=Christoph Lange,date=D:201110060000+02'00',type=todo]{ask Michael Gr{\"u}ninger for his mereology example in CL}
 
-\section{DOL Provides a Mechanism for Rich Annotation and Documentation of OMS.}\label{c:req:annotation}
+\section{DOL Provides a Mechanism for Rich Annotation and Documentation of OMS}\label{c:req:annotation}
 
 DOL provides a mechanism for identifying anything of relevance in OMS by assigning an IRI to it.  With RDF there is a standard mechanism for annotating things identified by IRIs.  Thus, DOL supports  annotations in the full generality specified in \cref{c:terms-annotation}.  The DOL serializations further support the fine-grained embedding of annotations into OMS. % up to the granularity of literate programming.
 
@@ -7538,7 +7538,7 @@ abbreviations for two inequations using ``$\leq$''.
 \end{example}
 
 
-\section{Satisfaction Relation.}
+\section{Satisfaction Relation}
 The satisfaction relation is inherited from Common Logic, using
 a translation $\CL(\_)$ of multiplicity formulas to Common Logic.
 That is, given a UML class and object diagram $\Sigma$, a
